#59 change to the way of preparing the payload to send every task even if only one task has been changed